--- a/main.yml
+++ b/main.yml
@@ -1,8 +1,1 @@
----
-- hosts: all
-  gather_facts: no
-  connection: local
-
-  tasks:
-    - name: Check the date on the server.
-      command: date
+date
